# tg-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  db.sqlite  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: settings.py
core/database/: baseconnect.py  db.sqlite
core/db/: __init__.py  base.py  engine.py  user.py
core/handlers/: basic.py  callback.py
core/keyboard/: inline.py  reply.py
core/migrations/: env.py
core/migrations/versions/: 2023_12_18_2124-b3eea296454b_migrate_1.py
core/utils/: commands.py  decorators.py
